# aot-inductor-cpp-example

./: .gitignore  CMakeLists.txt  README.md  inference.cpp  model.py
